# 3DSceneSfM

./: .gitignore  .pre-commit-config.yaml  README.md  colmap.db  colmap.db-shm  colmap.db-wal  data.dvc  main.py  pyproject.toml  test.py  test_rot.py
.dvc/: config
configs/: backbone.yaml  config.yaml  data.yaml  default.yaml  model.yaml  train.yaml
entrypoints/: load_landmarks.py  train.py
mlruns/0/: meta.yaml
sample_test_features/: keypoints.h5  matches.h5
src/: main.py
src/data/: load.py
src/features/: embedding.py  keypoints.py  matching.py
src/logging/: metrics.py
src/models/: baseline.py
src/preprocessing/: rotations.py
src/reconstruction/: colmap_utils.py  database.py  h5_to_db.py
src/utils/: general.py
